Remove dead/unreachable code.

BUG: 385551